site.css
* {
  margin: 0;
  padding: 0;
  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
  color: white;
  font-size: 16px;
}
body {
  background-color: black;
}

main {
  width: 375px;
  height: 667px;
  margin: 0 auto;
  padding: 20px 34px;
}

button,
button:hover {
  background-color: transparent;
  border: black 2px solid;
  color: inherit;
}

/* Utility styles */
.column-container {
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
}

/* Control bar styles */
.controls-display {
  display: flex;
  gap: 4em;
}

/* Control button styles */
.circular {
  border-radius: 50%;
  height: 4.5em;
  width: 4.5em;
}
div.circular {
  height: 5em;
  width: 5em;
  display: flex;
  justify-content: center;
  align-items: center;
}

/* Regular button styles */
.default {
  background-color: #636366;
}
.default:hover {
  background-color: #636366a7;
  color: #ffffffd5;
}

/* Start button styles */
.start {
  background-color: #30d15842;
  color: #30d158;
}
.start:hover {
  background-color: #30d15829;
  color: #30d158d5;
}

/* Stop button styles */
.stop {
  background-color: #ff443a42;
  color: #ff453a;
}
.stop:hover {
  background-color: #ff443a29;
  color: #ff453ad5;
}

/* Timer display styles */
.timer-display > span {
  font-size: 64px;
  font-weight: 200;
  font-variant-numeric: tabular-nums;
}

/* Lap display styles */
#lap-display {
  width: 100%;
  height: 200px;
  overflow: scroll;
  justify-content: flex-start;
}

.lap {
  height: 50px;
  padding: 15px;
  width: inherit;
  display: flex;
  justify-content: space-between;
  border-top: #636366 1px solid;
}

